@@ -12,13 +12,17 @@ noPerm: '&4You do not have permission to do that'
 prefixSyntax: '&b[%s] &r%s'
 
 # do not change this, it is used to check the messages version (test if there are any missing messages)
-version: 4
+version: 7
 
 # for placeholders
 # This is the placeholder for when the user has no team
 placeholder.noTeam: ''
 # if the team has not specified a description
 placeholder.noDescription: ''
+# for %betterTeams_rank%
+placeholder.owner: 'Owner'
+placeholder.admin: 'Admin'
+placeholder.default: 'Default'
 
 # for /team create <name>
 create.exists: '&6That team already exists'
